backend_deletetask/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: delete
  template:
    metadata:
      labels:
        app: delete
    spec:
      containers:
      - name: deletect
        image: devopsinsiders/micro-deletetask
        ports:
        - containerPort: 8000
