backend_deletetask/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delete-svc
spec:
  selector:
    app: delete
  ports:
  - port: 80
    targetPort: 8000
